# agent-recipes

./: .gitignore  AGENT_RECIPES_COMPETITIVE_STANDARD.md  AGENT_RECIPES_PLAN.md  AGENT_RECIPES_SHRINK_MAP.md  AGENT_RECIPES_SUPERSET_ROADMAP.md  CASS_REPORT_CLEANROOM_LEARNING_MAP.md  CONTRIBUTING.md  ENGINEERING_BUDGET.json  ENGINEERING_MATURITY.md  LICENSE  OPEN_SOURCE_MANIFEST.json  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  THREE_REPO_COMPETITIVE_SCORECARD.json  THREE_REPO_COMPETITIVE_SCORECARD.md  pyproject.toml  requirements-phase2-adapters.lock.txt  requirements-phase2-adapters.txt
agent_recipes/: OPEN_SOURCE_README.md  __init__.py  cli.py  client_config.py  core.py  corrections.py  dependencies.py  execution.py  install.py  learning_quality.py  ledger.py  lifecycle.py  mcp.py  migration.py  outcome.py  persistence.py  recall_quality.py  release.py
references/: UPSTREAM_SOURCES.md
tests/: test_phase0a.py  test_phase0b.py  test_phase0c.py  test_phase1.py  test_phase10_quality_benchmark.py  test_phase11_knowledge_fusion.py  test_phase12_completeness.py  test_phase13_course_skill_draft.py  test_phase13_lifecycle.py  test_phase14_readiness.py  test_phase15_outcomes.py  test_phase16_recall_boundary.py  test_phase17_evidence_hardening.py  test_phase18_engineering_maturity.py  test_phase19_ledger_and_lightness.py  test_phase2.py  test_phase20_lifecycle_module.py  test_phase21_outcome_module.py  test_phase22_execution_module.py  test_phase23_learning_quality_summary.py  test_phase24_three_repo_scorecard.py  test_phase25_recall_quality.py  test_phase3.py  (+10 more)
(+2 files in other folders)
